; ModuleID = '/home/carl/AnghaBench/vlc/modules/hw/vdpau/extr_vlc_vdpau.c_vdp_video_mixer_render.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/hw/vdpau/extr_vlc_vdpau.c_vdp_video_mixer_render.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { i32 (i32, i32, i32*, i32, i32, i32*, i32, i32, i32*, i32*, i32, i32*, i32*, i32, i32*)* }

@VIDEO_MIXER_RENDER = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @vdp_video_mixer_render(%struct.TYPE_5__* %0, i32 %1, i32 %2, i32* %3, i32 %4, i32 %5, i32* %6, i32 %7, i32 %8, i32* %9, i32* %10, i32 %11, i32* %12, i32* %13, i32 %14, i32* %15) #0 {
  %17 = alloca %struct.TYPE_5__*, align 8
  %18 = alloca i32, align 4
  %19 = alloca i32, align 4
  %20 = alloca i32*, align 8
  %21 = alloca i32, align 4
  %22 = alloca i32, align 4
  %23 = alloca i32*, align 8
  %24 = alloca i32, align 4
  %25 = alloca i32, align 4
  %26 = alloca i32*, align 8
  %27 = alloca i32*, align 8
  %28 = alloca i32, align 4
  %29 = alloca i32*, align 8
  %30 = alloca i32*, align 8
  %31 = alloca i32, align 4
  %32 = alloca i32*, align 8
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %17, align 8
  store i32 %1, i32* %18, align 4
  store i32 %2, i32* %19, align 4
  store i32* %3, i32** %20, align 8
  store i32 %4, i32* %21, align 4
  store i32 %5, i32* %22, align 4
  store i32* %6, i32** %23, align 8
  store i32 %7, i32* %24, align 4
  store i32 %8, i32* %25, align 4
  store i32* %9, i32** %26, align 8
  store i32* %10, i32** %27, align 8
  store i32 %11, i32* %28, align 4
  store i32* %12, i32** %29, align 8
  store i32* %13, i32** %30, align 8
  store i32 %14, i32* %31, align 4
  store i32* %15, i32** %32, align 8
  %33 = load i32, i32* @VIDEO_MIXER_RENDER, align 4
  %34 = call i32 @CHECK_FUNC(i32 %33)
  %35 = load %struct.TYPE_5__*, %struct.TYPE_5__** %17, align 8
  %36 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %35, i32 0, i32 0
  %37 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %36, i32 0, i32 0
  %38 = load i32 (i32, i32, i32*, i32, i32, i32*, i32, i32, i32*, i32*, i32, i32*, i32*, i32, i32*)*, i32 (i32, i32, i32*, i32, i32, i32*, i32, i32, i32*, i32*, i32, i32*, i32*, i32, i32*)** %37, align 8
  %39 = load i32, i32* %18, align 4
  %40 = load i32, i32* %19, align 4
  %41 = load i32*, i32** %20, align 8
  %42 = load i32, i32* %21, align 4
  %43 = load i32, i32* %22, align 4
  %44 = load i32*, i32** %23, align 8
  %45 = load i32, i32* %24, align 4
  %46 = load i32, i32* %25, align 4
  %47 = load i32*, i32** %26, align 8
  %48 = load i32*, i32** %27, align 8
  %49 = load i32, i32* %28, align 4
  %50 = load i32*, i32** %29, align 8
  %51 = load i32*, i32** %30, align 8
  %52 = load i32, i32* %31, align 4
  %53 = load i32*, i32** %32, align 8
  %54 = call i32 %38(i32 %39, i32 %40, i32* %41, i32 %42, i32 %43, i32* %44, i32 %45, i32 %46, i32* %47, i32* %48, i32 %49, i32* %50, i32* %51, i32 %52, i32* %53)
  ret i32 %54
}

declare dso_local i32 @CHECK_FUNC(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
